<resources>
    <string name="app_name">Quản lý sự kiện</string>

    <string name="add_event_activity_label">Thêm sự kiện</string>
    <string name="edit_salary_activity_label">Sửa lương</string>
    <string name="edit_event_activity_label">Chỉnh sửa sự kiện</string>
    <string name="view_event_activity_label">Chi tiết sự kiện</string>
    <string name="send_event_info_activity_label">Gửi thông tin sự kiện</string>
    <string name="show_conflict_activity_label">Các sự kiện bị xung đột</string>
    <string name="search_event_activity_label">Danh sách và Tìm kiếm sự kiện</string>
    <string name="calculate_salary_single_employee_label">Tính lương cho nhân viên</string>
    <string name="add_employee_single_label">Thêm nhân viên</string>
    <string name="edit_employee_single_label">Sửa thông tin nhân viên</string>
    <string name="view_employee_single_label">Chi tiết nhân viên</string>

    <string name="manage_event_fragment_label">Quản lý sự kiện</string>
    <string name="manage_employee_fragment_label">Quản lý nhân viên</string>
    <string name="calculate_salary_fragment_label">Quản lý lương</string>
    <string name="event_list_fragment_label">Danh sách sự kiện</string>
    <string name="more_settings_fragment_label">Cài đặt thêm</string>

    <string name="greeting">Xin chào</string>
    <string name="user_name">Nguyễn Quang Minh</string>

    <string name="navigation_drawer_open">Quản lý sự kiện</string>
    <string name="navigation_drawer_close">Quản lý sự kiện</string>

    <string name="channel_name">Quản lý sự kiện</string>
    <string name="channel_description">Nhắc nhở khi có sự kiện</string>

    <string-array name="sections_titles">
        <item>Tiêu đề</item>
        <item>Thời gian</item>
        <item>Địa điểm</item>
        <item>Nhân sự</item>
        <item>Ghi chú</item>
        <item>Công việc</item>
        <item>Lịch trình</item>
    </string-array>

    <string name="task_progress">Đã hoàn thành %1$d/%2$d</string>
    <string name="task_today">Hôm nay</string>
    <string name="task_overdue">Quá hạn %1$d ngày</string>
    <string name="task_still_valid">Còn %1$d ngày</string>

    <string name="salary_num_of_events">Tìm thấy %1$d bản lương trong %2$d sự kiện</string>
    <string name="num_of_events">%1$d sự kiện</string>
    <string name="salary_no_salaries">Không tìm thấy bản lương nào</string>
    <!--<string name="email_address_array_item">%1$s,</string>-->
    <string name="event_fragment_list_title">Sự kiện trong ngày %1$s</string>

    <string name="crash_toast_text">Ứng dụng bị lỗi. Gửi báo cáo qua email…</string>

    <string name="calendar_month_year">tháng %1$d năm %2$d</string>

    <string name="profile_picture">Ảnh đại diện</string>
    <string name="call_function">Gọi điện thoại</string>
    <string name="message_function">Nhắn tin</string>
    <string name="email_function">Gửi email</string>
    <string name="salary_function">Tính lương</string>
    <string name="ok_button">OK</string>
    <string name="add_button">Thêm</string>
    <string name="sort_button">Sắp xếp</string>
    <string name="schedule_dialog">Lịch trình</string>
    <string name="reminder_dialog">Chọn thời gian nhắc nhở</string>
    <string name="back_button">Trở về</string>
    <string name="task_dialog">Công việc</string>
    <string name="add_reminder_button">Thêm nhắc nhở</string>
    <string name="event_title">Tên sự kiện</string>
    <string name="select_default_employees">Chọn nhân sự mặc định</string>
    <string name="select_default_salary_employee">Chọn nhân sự tính lương mặc định</string>
    <string name="default_reminders">Nhắc nhở mặc định</string>
    <string name="default_employees">Nhân sự mặc định</string>
    <string name="default_salary_employee">Nhân sự tính lương mặc định</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="log_in_email">Email:</string>
    <string name="log_in_password">Mật khẩu:</string>
    <string name="log_in">Đăng nhập</string>
    <string name="sign_in">Đăng ký</string>
    <string name="select_default_reminders">Chọn nhắc nhở mặc định</string>
    <string name="select_employees">Chọn nhân sự</string>
    <string name="select_reminders">Chọn nhắc nhở</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_send_event_info">Gửi thông tin sự kiện</string>
    <string name="menu_edit_event">Chỉnh sửa sự kiện</string>
    <string name="menu_edit_salary">Chỉnh sửa lương</string>
    <string name="menu_delete_event">Xóa sự kiện</string>

    <!--    Tính lương Fragment  -->
    <string name="start_date">Ngày bắt đầu</string>
    <string name="end_date">Ngày kết thúc</string>
    <string name="calculate">Tính</string>
    <string name="employee">Nhân viên</string>
    <string name="sum">Tổng cộng</string>
    <string name="paid">Đã trả</string>
    <string name="unpaid">Chưa trả</string>
    <string name="zero">0</string>
    <string name="unpaid_left">Còn lại</string>
    <string name="pay_all">Thanh toán tất cả</string>
    <string name="save_changes">Lưu thay đổi</string>
    <string name="salary_history">Lịch sử lương</string>

    <!--    Thông tin nhân viên  -->
    <string name="sur_middle_name">Họ và tên đệm</string>
    <string name="fullName">Họ và Tên</string>
    <string name="speciality">Chuyên môn</string>
    <string name="day_of_birth">Ngày sinh</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="email">Email</string>
    <string name="id">CMND</string>

    <!--    DIALOG DATE PICKER  -->
    <string name="today">Ngày hôm nay</string>
    <string name="search_employee">Tìm kiếm nhân viên</string>
    <string name="add_employee">Thêm nhân viên</string>

    <!-- SALARY HISTORY -->
    <string name="salary_history_empty_text">"Không có lịch sử"</string>
</resources>
