<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/employee_list_item_function_layout"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/view_employee_profile_image_view"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/profile_picture" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:id="@+id/view_employee_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:textSize="@dimen/info_list_item"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/view_employee_speciality_text_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:textSize="@dimen/info_list_item" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/employee_list_item_function_layout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/view_employee_call_button"
            style="@style/ManageEmployeeButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/call_function"
            android:src="@drawable/ic_call" />

        <ImageButton
            android:id="@+id/view_employee_message_button"
            style="@style/ManageEmployeeButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/message_function"
            android:src="@drawable/ic_message" />

        <ImageButton
            android:id="@+id/view_employee_email_button"
            style="@style/ManageEmployeeButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/email_function"
            android:src="@drawable/ic_email" />

        <ImageButton
            android:id="@+id/view_employee_calculate_salary_button"
            style="@style/ManageEmployeeButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/salary_function"
            android:src="@drawable/ic_money_2" />
    </LinearLayout>
</RelativeLayout>