<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/add_schedule_dialog_title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/schedule_dialog"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/textPrimaryColor"
        android:textSize="@dimen/dialog_title" />

    <RelativeLayout
        android:id="@+id/add_schedule_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_schedule_dialog_title_text_view">

        <Button
            android:id="@+id/add_schedule_sort_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/sort_button"
            android:textSize="@dimen/text_button"
            android:textStyle="bold" />

        <Button
            android:id="@+id/add_schedule_add_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/add_button"
            android:textSize="@dimen/text_button"
            android:textStyle="bold" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/add_schedule_dialog_schedule_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/dialog_edit_task_button_layout"
        android:layout_below="@id/add_schedule_button_layout"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <LinearLayout
        android:id="@+id/dialog_edit_task_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/add_schedule_ok_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok_button"
            android:textSize="@dimen/text_button"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>