<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditEmployeeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/edit_employee_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="@color/textPrimaryColor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/edit_employee_toolbar"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:orientation="vertical">

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:gravity="center"-->
<!--            android:orientation="horizontal"-->
<!--            android:weightSum="19">-->

<!--            <ImageView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:src="@drawable/ic_name" />-->

<!--            <TextView-->
<!--                android:id="@+id/edit_employee_sur_middle_name_text_view"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="6"-->
<!--                android:text="@string/sur_middle_name"-->
<!--                android:textSize="@dimen/section_title" />-->

<!--            <EditText-->
<!--                android:id="@+id/edit_employee_activity_sur_middle_name_edit_text"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="12"-->
<!--                android:textSize="@dimen/section_content" />-->
<!--        </LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="19">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_name" />

            <TextView
                android:id="@+id/edit_employee_name_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/fullName"
                android:textSize="@dimen/section_title" />

            <EditText
                android:id="@+id/edit_employee_activity_name_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="12"
                android:textSize="@dimen/section_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="19">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_guitar" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/speciality"
                android:textSize="@dimen/section_title" />

            <!--<EditText-->
                <!--android:id="@+id/edit_employee_activity_speciality_edit_text"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="12"-->
                <!--android:textSize="@dimen/section_content" />-->
            <AutoCompleteTextView
                android:id="@+id/edit_employee_speciality_auto_complete_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="12"
                android:completionThreshold="1"
                android:textSize="@dimen/section_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="19">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_birthday" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/day_of_birth"
                android:textSize="@dimen/section_title" />

            <EditText
                android:id="@+id/edit_employee_activity_date_of_birth_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="12"
                android:clickable="true"
                android:focusable="false"
                android:textSize="@dimen/section_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="19">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_phone" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/phone_number"
                android:textSize="@dimen/section_title" />

            <EditText
                android:id="@+id/edit_employee_activity_phone_number_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="12"
                android:inputType="phone"
                android:textSize="@dimen/section_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="19">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_email_black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/email"
                android:textSize="@dimen/section_title" />

            <EditText
                android:id="@+id/edit_employee_activity_email_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="12"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/section_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="19">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_identity" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:text="@string/id"
                android:textSize="@dimen/section_title" />

            <EditText
                android:id="@+id/edit_employee_activity_cmnd_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="12"
                android:inputType="number"
                android:textSize="@dimen/section_content" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>